--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,36 @@
-.App {
-  text-align: center;
+body {
+    margin: 100px auto;
+    width: 50%;
+    padding: 10px;
+    text-align: center;
+ 
+}
+.title{
+font-family:Britannic;
 }
 
+.ContactCard {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode' sans-serif;
+    border: 3px solid black;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color:#f0f0f0;
+}
+
+.App {
+    text-align: center;
+    
+}
+ul{
+    list-style-type:none;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #282c33;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
